WebKit/win/WebEditorClient.cpp
@@ -210,7 +210,7 @@ void WebEditorClient::respondToChangedContents()
 
 void WebEditorClient::respondToChangedSelection()
 {
-    notImplemented();
+    m_webView->selectionChanged();
 }
 
 void WebEditorClient::didEndEditing()
@@ -597,8 +597,12 @@ void WebEditorClient::handleKeypress(KeyboardEvent* evt)
         evt->setDefaultHandled();
 }
 
-void WebEditorClient::handleInputMethodKeypress(KeyboardEvent*)
+void WebEditorClient::handleInputMethodKeypress(KeyboardEvent* evt)
 {
+    // The key press that triggers an IME triggers a WM_KEYDOWN with VK_PROCESSKEY
+    // so we intercept and prevent the keypress from occurring
+    if (evt->keyEvent() && evt->keyEvent()->WindowsKeyCode() == VK_PROCESSKEY)
+        evt->setDefaultHandled();
 }
 
 bool WebEditorClient::selectWordBeforeMenuEvent()
